--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploydev": "rsync -av dist/ pl:/var/www/html/grsl-ng.crgk.nl/"
   },
   "dependencies": {
     "@emotion/react": "^11.13.0",
