--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -14,7 +14,7 @@ jobs:
       - name: setup node
         uses: actions/setup-node@v4
         with:
-          node-verion: 20
+          node-version: 20
       - run: npm build
       - name: Create SSH key
         run: |
