--- a/.github/workflows/deploy-staging.yml
+++ b/.github/workflows/deploy-staging.yml
@@ -15,7 +15,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm build
+      - run: npm run build
       - name: Create SSH key
         run: |
           mkdir -p ~/.ssh/
